src/test/ui/issues/issue-46576.stderr
error: unused import: `BufRead`
  --> $DIR/issue-46576.rs:7:15
   |
LL | use std::io::{BufRead, BufReader, Read};
   |               ^^^^^^^
   |
note: lint level defined here
  --> $DIR/issue-46576.rs:4:9
   |
LL | #![deny(unused_imports)]
   |         ^^^^^^^^^^^^^^

error: aborting due to previous error

